# stack-clean-old

./: .gitignore  .stack-all  .travis.yml  ChangeLog.md  LICENSE  Main.hs  Makefile  README.md  TODO  stack-clean-old.cabal  stack-lts12.yaml  stack.yaml
.github/workflows/: build.yml
src/: Directories.hs  GHC.hs  GHCTarball.hs  Main.hs  Remove.hs  Snapshots.hs  Types.hs  Versions.hs
