name:                stack-clean-old
version:             0.1
synopsis:            Clean away old stack build artefacts
description:
        A tool for cleaning away old stack snapshots and stack-work builds
        to recover diskspace.
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020  Jens Petersen <juhpetersen@gmail.com>
homepage:            https://github.com/juhp/stack-clean-old
bug-reports:         https://github.com/juhp/stack-clean-old/issues
build-type:          Simple
category:            Distribution
extra-doc-files:     README.md
                     ChangeLog.md
cabal-version:       1.18

source-repository head
  type:                git
  location:            https://github.com/juhp/stack-clean-old.git

executable stack-clean-old
  main-is:             Main.hs
  other-modules:       Paths_stack_clean_old
--  hs-source-dirs:      app
  build-depends:       base < 5
                     , directory
                     , extra
                     , filepath
                     , simple-cmd >= 0.1.4
                     , simple-cmd-args >= 0.1.2
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
