name:                stack-clean-old
version:             0.4.4
synopsis:            Clean away old stack build artefacts
description:
        A tool for removing old .stack-work/install builds and
        .stack/snapshots & programs for older ghc versions
        to recover diskspace.
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020-2022  Jens Petersen <juhpetersen@gmail.com>
homepage:            https://github.com/juhp/stack-clean-old
bug-reports:         https://github.com/juhp/stack-clean-old/issues
build-type:          Simple
category:            Distribution
extra-doc-files:     README.md
                     ChangeLog.md
cabal-version:       1.18

source-repository head
  type:                git
  location:            https://github.com/juhp/stack-clean-old.git

executable stack-clean-old
  main-is:             Main.hs
  other-modules:       Paths_stack_clean_old
                       Directories
                       GHC
                       Remove
                       Snapshots
                       Types
                       Versions
  hs-source-dirs:      src
  build-depends:       base >= 4.8 && < 5
                     , directory >= 1.2.5
                     , extra >= 1.4.3
                     , filepath
                     , filemanip
                     , simple-cmd >= 0.1.4
                     , simple-cmd-args >= 0.1.2
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
